apps/booklore/deployment-booklore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimmory
  namespace: booklore
  labels:
    app: grimmory
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grimmory
  template:
    metadata:
      labels:
        app: grimmory
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: grimmory
          image: grimmory/grimmory:latest
          ports:
            - containerPort: 6565
              name: http
          volumeMounts:
            - name: booklore-config
              mountPath: /config
            - name: booklore-data
              mountPath: /app/data
            - name: books-fiction
              mountPath: /books/fiction
            - name: books-nonfiction
              mountPath: /books/nonfiction
            - name: books-adult
              mountPath: /books/adult
            - name: books-ingest
              mountPath: /bookdrop
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
        - name: mariadb
          image: mariadb:12-noble
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: booklore-config
          persistentVolumeClaim:
            claimName: booklore-config
        - name: booklore-data
          persistentVolumeClaim:
            claimName: booklore-data
        - name: postgres-data
          persistentVolumeClaim:
            claimName: booklore-postgres-data
        - name: books-fiction
          persistentVolumeClaim:
            claimName: booklore-books-fiction
        - name: books-nonfiction
          persistentVolumeClaim:
            claimName: booklore-books-nonfiction
        - name: books-adult
          persistentVolumeClaim:
            claimName: booklore-books-adult
        - name: books-ingest
          persistentVolumeClaim:
            claimName: booklore-books-ingest
