apps/booklore/service-booklore.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: booklore
spec:
  selector:
    app: booklore
  ports:
    - name: http
      port: 6565
      targetPort: 6565
